--- a/_includes/themes/bootstrap-3/default.html
+++ b/_includes/themes/bootstrap-3/default.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap styles -->
     <link href="{{ ASSET_PATH }}/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ ASSET_PATH }}/bootstrap/css/main.css" rel="stylesheet">
     
     <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/favicon.png">
    
